--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,11 @@
 version: "3"
+
 services:
   web:
     build:
       context: .
       dockerfile: ./Dockerfile
+    env_file: .env
     ports:
       - "5000:5001"
     depends_on:
