--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,8 +4,7 @@ dependencies = [
     "python-dotenv>=1.0.0",
     "waitress>=2.1.2",
     "Flask-SQLAlchemy>=3.1.1",
-    "Flask-Alembic>=2.0.1",
-    "psycopg2-binary>=2.9.9",
+    "Flask-Migrate>=4.0.0",
 ]
 name = "cursus"
 version = "1.0.0"
