--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,10 @@
 {
     "[python]": {
-        "editor.defaultFormatter": "ms-python.black-formatter"
+        "editor.defaultFormatter": "ms-python.black-formatter",
     },
+    "flake8.args": [
+        "--max-line-length=79",
+        "--ignore=E203,W503",
+        "--exclude=venv,build,dist,migrations",
+    ],
 }
