--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,8 @@ dependencies = [
     "Flask-SQLAlchemy>=3.1.1",
     "psycopg2-binary>=2.9.9",
     "Flask-Migrate>=4.0.0",
+    "Flask-Marshmallow>=0.15.0",
+    "marshmallow-sqlalchemy>=0.29.0",
 ]
 name = "cursus"
 version = "1.0.0"
