--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,9 @@
     "[python]": {
         "editor.defaultFormatter": "ms-python.black-formatter",
     },
+    "[sql]": {
+        "editor.formatOnSave": false
+    },
     "flake8.args": [
         "--max-line-length=79",
         "--ignore=E203,W503",
