feat: add type and iso639 for university domain relation

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,9 @@
     "[python]": {
         "editor.defaultFormatter": "ms-python.black-formatter",
     },
+    "[tsv]": {
+        "editor.renderFinalNewline": "off"
+    },
     "[sql]": {
         "editor.formatOnSave": false
     },
