--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ version = "1.0.0"
 description = "An open-source API repository for university courses."
 license = { file = "LICENSE" }
 authors = [{ name = "Rafael Cenzano", email = "richard@richardhnguyen.com" }]
+requires-python = ">=3.11.0"
 
 [project.scripts]
 cursus = "manage:cli"
