--- a/.editorconfig
+++ b/.editorconfig
@@ -11,6 +11,10 @@ charset = utf-8
 trim_trailing_whitespace = false
 insert_final_newline = true
 
+[*.{js,jsx,ts,tsx,css,scss,html,md,json,yml}]
+indent_size = 2
+
+
 [*.tsv]
 insert_final_newline = false
 indent_style = tab
