--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,7 @@
 [project]
 dependencies = [
     "Flask>=3.0.0",
+    "Jinja2>=3.1.0",
     "python-dotenv>=1.0.0",
     "waitress>=2.1.2",
     "Flask-SQLAlchemy>=3.1.1",
