--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,28 +1,31 @@
 {
-    "[python]": {
-        "editor.defaultFormatter": "ms-python.black-formatter",
-    },
-    "[tsv]": {
-        "editor.renderFinalNewline": "off"
-    },
-    "[sql]": {
-        "editor.formatOnSave": false
-    },
-    "flake8.args": [
-        "--max-line-length=79",
-        "--ignore=E203,W503",
-        "--exclude=venv,build,dist,migrations",
-    ],
-    "sqltools.connections": [
-        {
-            "previewLimit": 50,
-            "server": "172.26.0.2",
-            "port": 7432,
-            "driver": "PostgreSQL",
-            "name": "cursus-db",
-            "group": "cursus",
-            "database": "cursus",
-            "username": "postgres"
-        }
-    ],
+  "[python]": {
+    "editor.defaultFormatter": "ms-python.black-formatter",
+  },
+  "[tsv]": {
+    "editor.renderFinalNewline": "off"
+  },
+  "[html]": {
+    "editor.formatOnSave": false
+  },
+  "[sql]": {
+    "editor.formatOnSave": false
+  },
+  "flake8.args": [
+    "--max-line-length=79",
+    "--ignore=E203,W503",
+    "--exclude=venv,build,dist,migrations",
+  ],
+  "sqltools.connections": [
+    {
+      "previewLimit": 50,
+      "server": "172.26.0.2",
+      "port": 7432,
+      "driver": "PostgreSQL",
+      "name": "cursus-db",
+      "group": "cursus",
+      "database": "cursus",
+      "username": "postgres"
+    }
+  ],
 }
