feat: add flask-login for managing authentication

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,7 @@
 # Description: Example of .env file
 
 APP_SETTINGS="cursus.config.DevConfig"
+SECRET_KEY=""
 
 POSTGRES_USER=""
 POSTGRES_PASSWORD=""
