--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     "Flask-Marshmallow>=0.15.0",
     "Flask-Login>=0.6.3",
     "marshmallow-sqlalchemy>=0.29.0",
+    "requests>=2.31.0",
 ]
 name = "cursus"
 version = "0.0.2"
