--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "Flask-Login>=0.6.3",
     "marshmallow-sqlalchemy>=0.29.0",
     "requests>=2.31.0",
+    "cuid2>=2.0.0",
 ]
 name = "cursus"
 version = "0.0.2"
