--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -1,8 +1,3 @@
-# syntax=docker/dockerfile:1
-
-# Dockerfile image used for deployment and production. This image will be used
-# to publish to the Docker Hub and used as a base image during deployment.
-
 # Pull base image
 FROM python:3.11-slim-buster
 
@@ -14,13 +9,29 @@ RUN apt-get update && apt-get install -y \
     python3-pip \
     python3-setuptools \
     python3-wheel \
+    curl \ 
     && rm -rf /var/lib/apt/lists/*
+
+# Get nodejs from source
+RUN curl -sL https://deb.nodesource.com/setup_20.x -o /tmp/nodesource_setup.sh
+
+# Install nodejs
+RUN bash /tmp/nodesource_setup.sh
+RUN apt-get install -y nodejs
 
 # Set work directory (similiar to cd)
 WORKDIR /cursus
 
 # Copy project to docker container
 COPY . .
+
+# JavaScript dependencies related to the project
+RUN npm install -g sass
+RUN npm install -g uglify-js
+RUN npm install -g requirejs
+RUN npm install -g postcss
+RUN npm install -g postcss-cli
+RUN npm install -g autoprefixer
 
 # Install dependencies
 RUN pip install --upgrade pip 
@@ -29,6 +40,10 @@ RUN pip install -e .
 # Expose port
 EXPOSE 80
 
+# Remove webassets cache
+RUN rm -rf /cursus/cursus/static/.webassets-cache
+RUN rm -rf /cursus/cursus/static/css/min.bundle.css
+RUN rm -rf /cursus/cursus/static/js/min.bundle.js
+
 # Run the command as entry point
 CMD ["python3", "manage.py", "waitress", "--port=80"]
-
