feat: add babel plugins

--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,8 @@
 
 APP_SETTINGS="cursus.config.DevConfig"
 SECRET_KEY=""
+BABEL_PRESENT_ENV_PATH=""
+
 
 POSTGRES_USER=""
 POSTGRES_PASSWORD=""
@@ -13,4 +15,13 @@ PGADMIN_DEFAULT_EMAIL=""
 PGADMIN_DEFAULT_PASSWORD=""
 PGADMIN_LISTEN_PORT=
 
+# OAuth client id and client secrets
 
+GOOGLE_CLIENT_ID=""
+GOOGLE_CLIENT_SECRET=""
+
+GITHUB_CLIENT_ID=""
+GITHUB_CLIENT_SECRET=""
+
+DISCORD_CLIENT_ID=""
+DISCORD_CLIENT_SECRET=""
