--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ dependencies = [
     "marshmallow-sqlalchemy>=0.29.0",
     "requests>=2.31.0",
     "cuid2>=2.0.0",
+    "redis>=5.0.0",
     "cssmin",
     "jsmin",
 ]
