--- a/.env.example
+++ b/.env.example
@@ -15,6 +15,14 @@ PGADMIN_DEFAULT_EMAIL=""
 PGADMIN_DEFAULT_PASSWORD=""
 PGADMIN_LISTEN_PORT=
 
+# Redis
+CACHE_TYPE=""
+CACHE_REDIS_HOST=""
+CACHE_REDIS_PORT=0000
+CACHE_REDIS_DB=0
+CACHE_REDIS_URL=""
+CACHE_DEFAULT_TIMEOUT=500
+
 # OAuth client id and client secrets
 
 GOOGLE_CLIENT_ID=""
