--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "Flask-Login>=0.6.3",
     "Flask-Assets>=2.1.0",
     "Flask-Caching>=2.1.0",
+    "flask-swagger-ui>=4.11.0",
     "marshmallow-sqlalchemy>=0.29.0",
     "requests>=2.31.0",
     "cuid2>=2.0.0",
@@ -19,7 +20,7 @@ dependencies = [
     "jsmin",
 ]
 name = "cursus"
-version = "0.0.4"
+version = "0.0.5"
 description = "An open-source API repository for university courses."
 license = { file = "LICENSE" }
 authors = [{ name = "Richard H Nguyen", email = "richard@richardhnguyen.com" }]
