--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,6 +11,7 @@
   "[sql]": {
     "editor.formatOnSave": false
   },
+  "python.defaultInterpreterPath": "./.venv/bin/python3",
   "flake8.args": [
     "--max-line-length=79",
     "--ignore=E203,W503",
