feat: setup unittest with pytest and coverage

--- a/.env.example
+++ b/.env.example
@@ -3,14 +3,18 @@
 APP_SETTINGS="cursus.config.DevConfig"
 SECRET_KEY=""
 BABEL_PRESENT_ENV_PATH=""
+SWAGGER_API_SPEC_URL=""
 
 
+# Database
 POSTGRES_USER=""
 POSTGRES_PASSWORD=""
 POSTGRES_DB=""
 PGPORT=
 DATABASE_URL=""
+DATABASE_TEST_URL=""
 
+# PgAdmin for monitoring database
 PGADMIN_DEFAULT_EMAIL=""
 PGADMIN_DEFAULT_PASSWORD=""
 PGADMIN_LISTEN_PORT=
