--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,6 +9,15 @@ on:
     branches: [main]
 
 jobs:
+  container_job:
+    runs-on: ubuntu-latest
+    services:
+      redis:
+        image: redis
+        ports:
+          - 6379:6379
+        options: --entrypoint redis-server
+
   build:
     runs-on: ubuntu-latest
     steps:
@@ -41,6 +50,9 @@ jobs:
       - name: Run tests
         env:
           TEST_DATABASE_URL: ${{ secrets.TEST_DATABASE_URL }}
+          CACHE_TYPE: redis
+          CACHE_REDIS_URL: redis://redis:6379/0
+          CACHE_DEFAULT_TIMEOUT: 500
         run: |
           python -m coverage run -m pytest
 
